<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Button
        android:text="Toast"
        android:onClick="toastClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:text="Mongol Toast"
        android:onClick="mongolToastClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:text="Mongol Toast (xml string)"
        android:onClick="mongolToastFromXmlClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>