<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

    <HorizontalScrollView
        android:id="@+id/hsvEditTextContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <net.studymongolian.mongollibrary.MongolEditText
            android:id="@+id/metExample"
            app:text=""
            app:textSize="30sp"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:background="@android:color/white"
            />

    </HorizontalScrollView>


        <!--<net.studymongolian.mongollibrary.MongolEditText-->
            <!--android:id="@+id/metExample"-->
            <!--app:text=""-->
            <!--app:textSize="30sp"-->
            <!--android:padding="10dp"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="200dp"-->
            <!--android:background="@android:color/white"-->
            <!--/>-->




    <LinearLayout
        android:id="@+id/first_button_row"
        android:layout_below="@id/hsvEditTextContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="input text"
            android:onClick="inputTextClick"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <Button
            android:text="select"
            android:onClick="selectTextClick"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <Button
            android:text="delete"
            android:onClick="deleteClick"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <Button
            android:text="keyboard"
            android:onClick="keyboardClick"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/first_button_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/custom_menu_button"
            android:text="use custom context menu"
            android:onClick="contextMenuClick"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</RelativeLayout>